--- a/KotaPalace/Resources/layout/activity_sign_up_business.xml
+++ b/KotaPalace/Resources/layout/activity_sign_up_business.xml
@@ -63,7 +63,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
             >
@@ -75,10 +75,11 @@
                     android:hint="Business Name"/>
 
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
@@ -94,11 +95,12 @@
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
             >
@@ -116,7 +118,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
             >
@@ -125,8 +127,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="text"
                     android:id="@+id/InputBusinessEmail"
-                    android:hint="Business Email"
-                    />
+                    android:hint="Business Email"/>
 
             </com.google.android.material.textfield.TextInputLayout>
             
@@ -147,13 +148,13 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:hint="Open"
                     android:layout_weight="50">
 
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/InputBusinessMFOpen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -163,13 +164,13 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:hint="Close"
                     android:layout_weight="50">
 
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/InputBusinessMFClose"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -181,8 +182,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Saturday"
-                android:layout_margin="10dp"
-            />
+                android:layout_margin="10dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -194,13 +194,13 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:hint="Open"
                     android:layout_weight="50">
 
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/InputBusinessSatOpen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -210,13 +210,13 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:hint="close"
                     android:layout_weight="50">
 
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/InputBusinessSatClose"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -228,8 +228,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sunday"
-                android:layout_margin="10dp"
-            />
+                android:layout_margin="10dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -241,13 +240,13 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:hint="open"
                     android:layout_weight="50">
 
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/InputBusinessSunOpen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -257,13 +256,13 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:hint="close"
                     android:layout_weight="50">
 
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/InputBusinessSunClose"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -278,8 +277,7 @@
                 android:text="business address"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-            />
+                android:layout_marginRight="10dp"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/BtnUpdateBusinessProfile"
