--- a/KotaPalace/Resources/layout/business_address_dialog.xml
+++ b/KotaPalace/Resources/layout/business_address_dialog.xml
@@ -1,4 +1,4 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout 
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,29 +6,38 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.google.android.material.appbar.MaterialToolbar
+        <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/cancel_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/mtrl_ic_cancel"
+            android:tint="@color/black"
+            android:layout_alignParentRight="true"
+            android:contentDescription=""
+            android:layout_margin="10dp"/>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:startIconDrawable="@android:drawable/ic_menu_mylocation"
+            app:endIconTint="@color/black"
+            android:layout_below="@id/cancel_iv">
 
-            <RelativeLayout
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txt_address"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/cancel_iv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/mtrl_ic_cancel"
-                    android:backgroundTint="@color/black"
-                    android:layout_alignParentRight="true"
-                    android:contentDescription=""
-                    android:layout_margin="5dp"/>
-            </RelativeLayout>
-        </com.google.android.material.appbar.MaterialToolbar>
-    
+                android:layout_height="wrap_content"/>
+        </com.google.android.material.textfield.TextInputLayout>
+    </RelativeLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <fragment
@@ -36,13 +45,15 @@
         android:layout_height="match_parent"
         android:id="@+id/fragMap"
         class="com.google.android.gms.maps.SupportMapFragment"
-        tools:ignore="MissingAndroidNamespace" />
+        tools:ignore="MissingAndroidNamespace" 
+        android:layout_below="@id/appbarLayout1"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/ConfirmAddressBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="confirm address"
-        android:layout_gravity="bottom|center"/>
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
