--- a/KotaPalace/Resources/layout/fragment_profile.xml
+++ b/KotaPalace/Resources/layout/fragment_profile.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/testTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
