--- a/KotaPalace/Resources/layout/business_address_dialog.xml
+++ b/KotaPalace/Resources/layout/business_address_dialog.xml
@@ -48,6 +48,13 @@
         tools:ignore="MissingAndroidNamespace" 
         android:layout_below="@id/appbarLayout1"/>
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        app:srcCompat="@drawable/marker"/>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/ConfirmAddressBtn"
         android:layout_width="wrap_content"
