--- a/KotaPalace/Resources/layout/menu_row.xml
+++ b/KotaPalace/Resources/layout/menu_row.xml
@@ -29,7 +29,9 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 app:cardCornerRadius="10dp"
                 app:cardBackgroundColor="@color/orange_active">
 
@@ -38,41 +40,100 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:paddingStart="15dp"
-                    android:paddingEnd="15dp">
+                    android:paddingEnd="15dp"
+                    android:paddingTop="0dp"
+                    android:paddingBottom="0dp">
 
-                    <androidx.appcompat.widget.AppCompatTextView
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Name"
-                        android:textStyle="bold"
-                        android:layout_margin="5dp"
-                        android:id="@+id/row_name"
-                    />
-                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Name:"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorRed"/>
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Name"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorRed"
+                            android:textSize="18sp"
+                            android:id="@+id/row_name"
+                            android:layout_alignParentEnd="true"/>
+                    </RelativeLayout>
+                    <!--<androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="menu id"
                         android:textStyle="bold"
                         android:layout_margin="5dp"
                         android:id="@+id/row_menu_id"
-                    />
-                    <androidx.appcompat.widget.AppCompatTextView
+                    />-->
+                    <!--<androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="status"
                         android:textStyle="bold"
                         android:layout_margin="5dp"
                         android:id="@+id/row_status"
-                    />
+                    />-->
 
-                    <androidx.appcompat.widget.AppCompatTextView
+                    <RelativeLayout
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Availability:"
+                            android:textStyle="bold"
+                            android:textColor="@color/black"/>
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="status"
+                            android:textStyle="bold"
+                            android:textColor="@color/black"
+                            android:id="@+id/row_status"
+                            android:layout_alignParentEnd="true"
+                            />
+                    </RelativeLayout>
+
+                    <!--<androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="shop"
                         android:textStyle="bold"
+                        android:textSize="20sp"
                         android:layout_margin="5dp"
                         android:id="@+id/row_price"
-                    />
+                    />-->
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Price:"
+                            android:textStyle="bold"
+                            android:textSize="20sp"
+                            />
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="shop"
+                            android:textStyle="bold"
+                            android:textSize="20sp"
+                            android:id="@+id/row_price"
+                            android:layout_alignParentEnd="true"
+                        />
+                    </RelativeLayout>
 
                     <com.google.android.material.chip.ChipGroup
                         android:minWidth="25dp"
@@ -91,6 +152,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
             >
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/row_btn_delete"
@@ -103,14 +166,15 @@
                     android:textSize="12sp"
                     app:strokeColor="@color/red"
                     android:layout_alignParentEnd="true"
-                    android:layout_margin="10dp"/>
+                    android:layout_marginEnd="10dp"
+                    />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/row_btn_update"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:layout_margin="5dp"
+                    android:layout_marginEnd="5dp"
                     android:text="update"
                     android:textAlignment="center"
                     android:textColor="@color/green"
