--- a/KotaPalace/Resources/layout/fragment_add_extras.xml
+++ b/KotaPalace/Resources/layout/fragment_add_extras.xml
@@ -10,7 +10,7 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/close_add_ons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="40dp"
         android:text="enter extra menu items text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         android:textColor="@color/black"
         android:transitionName="welcome_text" />
