--- a/KotaPalace/Resources/layout/fragment_add_menu.xml
+++ b/KotaPalace/Resources/layout/fragment_add_menu.xml
@@ -21,14 +21,13 @@
                 android:layout_height="wrap_content">
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginEnd="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:id="@+id/CloseDialogImg"
                     app:layout_anchor="@+id/menu_top_app_bar"
-                    android:src="@android:drawable/ic_menu_close_clear_cancel"
+                    android:src="@drawable/mtrl_ic_cancel"
                     app:tint="@color/white" />
             </RelativeLayout>
         </com.google.android.material.appbar.MaterialToolbar>
