--- a/KotaPalace/Resources/layout/activity_sign_up.xml
+++ b/KotaPalace/Resources/layout/activity_sign_up.xml
@@ -108,6 +108,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="phone"
                     android:id="@+id/InputRegPhoneNumber"
+                    android:maxLength="10"
                     android:hint="Phone Number"/>
 
             </com.google.android.material.textfield.TextInputLayout>
