--- a/KotaPalace/Resources/layout/menu_row.xml
+++ b/KotaPalace/Resources/layout/menu_row.xml
@@ -72,7 +72,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Availability:"
+                            android:text="Quantity:"
                             android:textStyle="bold"
                             android:textColor="@color/black"/>
 
@@ -82,7 +82,7 @@
                             android:text="status"
                             android:textStyle="bold"
                             android:textColor="@color/black"
-                            android:id="@+id/row_status"
+                            android:id="@+id/row_quantity"
                             android:layout_alignParentEnd="true"
                             />
                     </RelativeLayout>
