--- a/KotaPalace/Resources/layout/menu_row.xml
+++ b/KotaPalace/Resources/layout/menu_row.xml
@@ -33,7 +33,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 app:cardCornerRadius="10dp"
-                app:cardBackgroundColor="@color/orange_active">
+                app:cardBackgroundColor="@color/gray">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -51,17 +51,15 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Name:"
-                            android:textSize="18sp"
                             android:textStyle="bold"
-                            android:textColor="@color/colorRed"/>
+                            android:textColor="@color/black"/>
 
                         <androidx.appcompat.widget.AppCompatTextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Name"
                             android:textStyle="bold"
-                            android:textColor="@color/colorRed"
-                            android:textSize="18sp"
+                            android:textColor="@color/black"
                             android:id="@+id/row_name"
                             android:layout_alignParentEnd="true"/>
                     </RelativeLayout>
@@ -95,7 +93,7 @@
                             android:layout_height="wrap_content"
                             android:text="Price:"
                             android:textStyle="bold"
-                            android:textSize="20sp"
+                            android:textColor="@color/black"
                             />
 
                         <androidx.appcompat.widget.AppCompatTextView
@@ -103,7 +101,7 @@
                             android:layout_height="wrap_content"
                             android:text="shop"
                             android:textStyle="bold"
-                            android:textSize="20sp"
+                            android:textColor="@color/black"
                             android:id="@+id/row_price"
                             android:layout_alignParentEnd="true"
                         />
