--- a/KotaPalace/Resources/layout/order_row.xml
+++ b/KotaPalace/Resources/layout/order_row.xml
@@ -23,15 +23,27 @@
             android:contentDescription=""
             />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/customer_id"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_centerVertical="true"
             android:layout_margin="5dp"
             android:layout_toEndOf="@id/user_image"
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@id/prepare_btn"
-            />
+            android:layout_toStartOf="@id/prepare_btn">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/customer_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/order_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/prepare_btn"
@@ -44,6 +56,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:text="View" />
+            android:text="prepare" 
+           />
     </RelativeLayout>
 </com.google.android.material.card.MaterialCardView>
