--- a/KotaPalace/Resources/layout/prepare_orders_fragment_tab.xml
+++ b/KotaPalace/Resources/layout/prepare_orders_fragment_tab.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/orders_rv"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="READY ORDERS"
-        android:layout_centerInParent="true"/>
+        />
 </RelativeLayout>
