--- a/KotaPalace/Resources/layout/order_row.xml
+++ b/KotaPalace/Resources/layout/order_row.xml
@@ -30,7 +30,7 @@
             android:layout_centerVertical="true"
             android:layout_margin="5dp"
             android:layout_toEndOf="@id/user_image"
-            android:layout_toStartOf="@id/prepare_btn">
+            android:layout_toStartOf="@id/view_btn">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/customer_id"
@@ -46,7 +46,7 @@
         </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/prepare_btn"
+            android:id="@+id/view_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/customer_id"
@@ -56,7 +56,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:text="prepare" 
+            android:text="view" 
            />
     </RelativeLayout>
 </com.google.android.material.card.MaterialCardView>
