--- a/KotaPalace/Resources/layout/order_row_view.xml
+++ b/KotaPalace/Resources/layout/order_row_view.xml
@@ -72,6 +72,14 @@
                         android:textColor="@color/price_color"
                         android:textSize="16sp"
                         android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/order_quantity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="R19"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
             </LinearLayout>
