--- a/KotaPalace/Resources/layout/row_menu.xml
+++ b/KotaPalace/Resources/layout/row_menu.xml
@@ -78,11 +78,13 @@
 
                         <TextView
                             android:id="@+id/row_menu_id"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
                             android:layout_marginBottom="4dp"
-                            android:text="Menu ID:"
-                            android:textSize="16sp" />
+                            android:text="ID:"
+                            android:textSize="16sp"
+                            android:gravity="center"
+                            android:background="@drawable/button_bg"/>
 
                         <!--<TextView
                             android:id="@+id/row_quantity"
